fix navbar height on mobile devices

--- a/src/components/subComponents/Navbar.scss
+++ b/src/components/subComponents/Navbar.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: -100%;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #fff;
   color: #101010;
   z-index: 999999999;
